<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/base_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGraySettingDept"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/ll_menber_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorWhite"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv_dept_name"
                android:layout_width="60dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/dt_name"
                android:textColor="@color/colorDarkContactHeader"
                android:textSize="@dimen/base_mid_title_text16" />

            <ImageView
                android:id="@+id/img_menber_contact"
                android:layout_width="72dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="15dp"
                android:src="@mipmap/img_menber_contact" />

            <EditText
                android:id="@+id/et_menber_name"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@id/img_menber_contact"
                android:layout_toRightOf="@id/tv_dept_name"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="必填"
                android:paddingLeft="6dp"
                android:textColor="@color/colorWhiteMainTab"
                android:textSize="@dimen/base_mid_title_text16" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:id="@+id/ll_dept_manager"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorWhite"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv_dept_manager"
                android:layout_width="60dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/dt_phone"
                android:textColor="@color/colorDarkContactHeader"
                android:textSize="@dimen/base_mid_title_text16" />


            <EditText
                android:id="@+id/et_menber_phone"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/tv_dept_manager"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="必填"
                android:paddingLeft="6dp"
                android:textColor="@color/colorWhiteMainTab"
                android:textSize="@dimen/base_mid_title_text16" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:id="@+id/ll_menber_duty"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorWhite"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/tv_menber_duty"
                android:layout_width="60dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/dt_duty"
                android:textColor="@color/colorDarkContactHeader"
                android:textSize="@dimen/base_mid_title_text16" />

            <ImageView
                android:id="@+id/img_menber_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="15dp"
                android:src="@mipmap/dt_arrow_to" />

            <EditText
                android:id="@+id/et_menber_duty"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@id/img_menber_more"
                android:layout_toRightOf="@id/tv_menber_duty"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="必填"
                android:paddingLeft="6dp"
                android:textColor="@color/colorWhiteMainTab"
                android:textSize="@dimen/base_mid_title_text16" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>